--- a/bin/docker-compose.yml
+++ b/bin/docker-compose.yml
@@ -1,98 +1,48 @@
-version: "3.8"
+XSversion: "3.8"
 services:
 
-    daisy-gavilan:
+    market-11th:
         build:
             context: ./
-        container_name: daisy-gavilan
+        container_name: market-11th
         volumes:
           - type: bind
-            source: $MMITSS_ROOT/mmitss/bin/corridors/Anthem/Daisy-Gavilan/nojournal
+            source: $MMITSS_ROOT/mmitss/bin/corridors/Portland_field/market-11th/nojournal
             target: /nojournal
         networks:    
             mmitss_vlan:
                 ipv4_address: 10.12.6.3    
 
-    daisy-dedication:
+    market-10th:
         build:
             context: ./
-        container_name: daisy-dedication
+        container_name: market-10th
         volumes:
             - type: bind
-              source: $MMITSS_ROOT/mmitss/bin/corridors/Anthem/Daisy-Dedication/nojournal
+              source: $MMITSS_ROOT/mmitss/bin/corridors/Portland_field/market-10th/nojournal
               target: /nojournal
         networks:    
             mmitss_vlan:
                 ipv4_address: 10.12.6.6
 
-    daisy-meridian:
+    market-broadway:
         build:
             context: ./
-        container_name: daisy-meridian
+        container_name: market-broadway
         volumes:
             - type: bind
-              source: $MMITSS_ROOT/mmitss/bin/corridors/Anthem/Daisy-Meridian/nojournal
+              source: $MMITSS_ROOT/mmitss/bin/corridors/Portland_field/market-broadway/nojournal
               target: /nojournal
         networks:    
             mmitss_vlan:
-                ipv4_address: 10.12.6.9
-        
-    daisy-hastings:
-        build:
-            context: ./
-        container_name: daisy-hastings
-        volumes:
-          - type: bind
-            source: $MMITSS_ROOT/mmitss/bin/corridors/Anthem/Daisy-Hastings/nojournal
-            target: /nojournal
-        networks:    
-            mmitss_vlan:
-                ipv4_address: 10.12.6.12
-        
-    daisy-memorial:
-        build:
-            context: ./
-        container_name: daisy-memorial
-        volumes:
-          - type: bind
-            source: $MMITSS_ROOT/mmitss/bin/corridors/Anthem/Daisy-Memorial/nojournal
-            target: /nojournal
-        networks:    
-            mmitss_vlan:
-                ipv4_address: 10.12.6.15
-        
-    daisy-anthem:
-        build:
-            context: ./
-        container_name: daisy-anthem
-        volumes:
-            - type: bind
-              source: $MMITSS_ROOT/mmitss/bin/corridors/Anthem/Daisy-Anthem/nojournal
-              target: /nojournal
-        networks:
-            mmitss_vlan:
-                ipv4_address: 10.12.6.18
+                ipv4_address: 10.12.6.9        
 
-    simulation-tools:
-        build:
-            context: ./
-            dockerfile: Dockerfile_simulation-tools
-        container_name: simulation-tools
-        volumes:
-          - type: bind
-            source: $MMITSS_ROOT/mmitss/bin/corridors/simulation-tools/nojournal
-            target: /nojournal
-        networks:    
-            mmitss_vlan:
-                ipv4_address: 10.12.6.20
 
 networks:
     mmitss_vlan:
         driver: macvlan
         driver_opts:
-            parent: eno2 
+            parent: enp4s0 
         ipam:
             config:
               - subnet: 10.12.6.0/24
-
-
