--- a/bin/supervisord.conf
+++ b/bin/supervisord.conf
@@ -96,10 +96,28 @@ redirect_stderr=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 
+[program: M_MsgEncoder]
+command=./M_MsgEncoder
+directory=/mmitss
+priority=2
+autostart=true
+redirect_stderr=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+
+[program: M_WirelessMsgDecoder]
+command=./M_WirelessMsgDecoder
+directory=/mmitss
+priority=3
+autostart=true
+redirect_stderr=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+
 [program: M_MapSpatBroadcaster]
 command=./M_MapSpatBroadcaster
 directory=/mmitss
-priority=3
+priority=4
 autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
@@ -108,7 +126,7 @@ stdout_logfile_maxbytes=0
 [program: M_PriorityRequestSolver]
 command=./M_PriorityRequestSolver
 directory=/mmitss
-priority=4
+priority=5
 autostart=true
 redirect_stderr=true       
 ;stdout_logfile=/dev/fd/1        
@@ -136,7 +154,7 @@ redirect_stderr=true
 [program: M_V2XDataCollector]
 command=./M_V2XDataCollector
 directory=/mmitss
-priority=9
+priority=8
 autostart=true
 redirect_stderr=true          
 ;stdout_logfile=/dev/fd/1        
@@ -145,7 +163,7 @@ redirect_stderr=true
 ;[program:M_SystemInterface]
 ;command=./M_SystemInterface
 ;directory=/mmitss
-;priority=10
+;priority=9
 ;autostart=false
 ;redirect_stderr=true  
 ;stopasgroup=true             ; send stop signal to the UNIX process group (default false)
