Setup to build image for server and run from compose

--- a/bin/docker-compose.yml
+++ b/bin/docker-compose.yml
@@ -1,27 +1,6 @@
 version: "3.8"
 services:
 
-<<<<<<< HEAD
-#    market-11th:
-#        build:
-#            context: ./
-#        container_name: market-11th
-#        volumes:
-#          - type: bind
-#            source: $MMITSS_ROOT/mmitss/bin/corridors/Portland_Field/market-11th/nojournal
-#            target: /nojournal
-#        networks:    
-#            mmitss_vlan:
-#                ipv4_address: 172.16.52.98    
-#
-    market-10th:
-        build:
-            context: ./
-        container_name: market-10th
-        volumes:
-            - type: bind
-              source: $MMITSS_ROOT/mmitss/bin/corridors/Portland_Field/market-10th/nojournal
-=======
     speedway-campbell:
         build:
             context: ./
@@ -41,25 +20,11 @@ services:
         volumes:
             - type: bind
               source: $MMITSS_ROOT/mmitss/bin/corridors/speedway/speedway-cherry/nojournal
->>>>>>> develop
               target: /nojournal
         networks:    
             mmitss_vlan:
-                ipv4_address: 172.16.52.95
+                ipv4_address: 10.12.6.6
 
-<<<<<<< HEAD
-    market-broadway:
-        build:
-            context: ./
-        container_name: market-broadway
-        volumes:
-            - type: bind
-              source: $MMITSS_ROOT/mmitss/bin/corridors/Portland_Field/market-broadway/nojournal
-              target: /nojournal
-        networks:    
-            mmitss_vlan:
-                ipv4_address: 172.16.52.92        
-=======
     speedway-mountain:
         build:
             context: ./
@@ -83,8 +48,19 @@ services:
         networks:    
             mmitss_vlan:
                 ipv4_address: 10.12.6.12
->>>>>>> develop
 
+    simulation-tools:
+        build:
+            context: ./
+            dockerfile: Dockerfile_simulation-tools
+        container_name: simulation-tools
+        volumes:
+          - type: bind
+            source: $MMITSS_ROOT/mmitss/bin/corridors/simulation-tools/nojournal
+            target: /nojournal
+        networks:    
+            mmitss_vlan:
+                ipv4_address: 10.12.6.20
 
 networks:
     mmitss_vlan:
@@ -93,4 +69,5 @@ networks:
             parent: enp4s0 
         ipam:
             config:
-              - subnet: 172.16.52.0/24
+              - subnet: 10.12.6.0/24
+
