updated supervisorconf for signal coordination generator

--- a/bin/supervisord.conf
+++ b/bin/supervisord.conf
@@ -140,12 +140,21 @@ priority=9
 autostart=true
 redirect_stderr=true          
 ;stdout_logfile=/dev/fd/1        
-;stdout_logfile_maxbytes=0 
+;stdout_logfile_maxbytes=0
+
+[program: M_SignalCoordinationRequestGenerator]
+command=./M_SignalCoordinationRequestGenerator
+directory=/mmitss
+priority=10
+autostart=true
+redirect_stderr=true          
+;stdout_logfile=/nojournal/bin/log/coordinationLog.txt
+stdout_logfile_maxbytes=5MB
 
 ;[program:M_SystemInterface]
 ;command=./M_SystemInterface
 ;directory=/mmitss
-;priority=10
+;priority=11
 ;autostart=false
 ;redirect_stderr=true  
 ;stopasgroup=true             ; send stop signal to the UNIX process group (default false)
