updated supervisorconf for signal coordination generator

--- a/bin/corridors/Anthem_field/Daisy-Memorial/nojournal/bin/supervisord.conf
+++ b/bin/corridors/Anthem_field/Daisy-Memorial/nojournal/bin/supervisord.conf
@@ -180,6 +180,15 @@ autostart=true
 stopsignal=INT
 redirect_stderr=true          
 ;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB
+
+[program: M_SignalCoordinationRequestGenerator]
+command=./M_SignalCoordinationRequestGenerator
+directory=/mmitss
+priority=12
+autostart=true
+redirect_stderr=true          
+;stdout_logfile=/nojournal/bin/log/coordinationLog.txt
 stdout_logfile_maxbytes=5MB 
 
 ; The below sample eventlistener section shows all possible
