--- a/bin/corridors/Anthem_field/Daisy-Dedication/nojournal/bin/supervisord.conf
+++ b/bin/corridors/Anthem_field/Daisy-Dedication/nojournal/bin/supervisord.conf
@@ -180,7 +180,16 @@ autostart=true
 stopsignal=INT
 redirect_stderr=true          
 ;stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=5MB 
+stdout_logfile_maxbytes=5MB
+
+[program: M_SignalCoordinationRequestGenerator]
+command=./M_SignalCoordinationRequestGenerator
+directory=/mmitss
+priority=12
+autostart=true
+redirect_stderr=true          
+;stdout_logfile=/nojournal/bin/log/coordinationLog.txt
+stdout_logfile_maxbytes=5MB
 
 ; The below sample eventlistener section shows all possible
 ; eventlistener subsection values, create one or more 'real'
