--- a/bin/dockerfiles/arm/Dockerfile-mrp.arm
+++ b/bin/dockerfiles/arm/Dockerfile-mrp.arm
@@ -14,6 +14,8 @@ COPY MapSpatBroadcaster/arm/M_MapSpatBroadcaster /mmitss
 COPY SystemInterface/arm/M_SystemInterface /mmitss
 COPY V2XDataCollector/arm/M_V2XDataCollector /mmitss
 COPY V2XDataFtpClient/arm/M_V2XDataFtpClient /mmitss
+COPY SignalCoordinationRequestGenerator/arm
+/M_SignalCoordinationRequestGenerator /mmitss
 
 ENTRYPOINT ["/usr/bin/supervisord", "--configuration=/nojournal/bin/supervisord.conf"]
 
