--- a/bin/dockerfiles/x86/Dockerfile.x86
+++ b/bin/dockerfiles/x86/Dockerfile.x86
@@ -15,6 +15,7 @@ COPY MapEngine/x86/M_MapEngine /mmitss
 COPY SystemInterface/x86/M_SystemInterface /mmitss
 COPY V2XDataCollector/x86/M_V2XDataCollector /mmitss
 COPY V2XDataFtpClient/x86/M_V2XDataFtpClient /mmitss
+COPY SignalCoordinationRequestGenerator/x86/M_SignalCoordinationRequestGenerator /mmitss
 
 ENTRYPOINT ["/usr/bin/supervisord", "--configuration=/nojournal/bin/supervisord.conf"]
 
