--- a/bin/corridors/speedway/speedway-campbell/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/speedway/speedway-campbell/nojournal/bin/mmitss-phase3-master-config.json
@@ -12,8 +12,11 @@
     "VehicleType": "Transit",
 	"Logging": "True",
 	"SRMTimedOutTime": 10.0,
+	"ScheduleExecutionBuffer": 1.0,
 	"SystemPerformanceTimeInterval": 300.0,
 	"ApplicationPlatform": "roadside",
+	"CoordinationPlanCheckingTimeInterval": 300,
+	"PeerDataDecoding": false,
     "PortNumber":
 	{
 		"MessageTransceiver":
@@ -115,25 +118,25 @@
         "Latitude_DecimalDegree":123,
         "Longitude_DecimalDegree":321,
         "Elevation_Meter":213
-    },
+	},
+	"DataTransfer": {
+		"FtpServerPort": 9090,
+		"StartTime": {
+			"Hour": 18,
+			"Minute": 30
+		},
+		"EndTime": {
+			"Hour": 19,
+			"Minute": 30
+		},
+		"MaxRetries": 3
+	},
     "PriorityParameter": {
         "EmergencyVehicleWeight":1.0,
         "EmergencyVehicleSplitPhaseWeight":0.1,        
         "TransitWeight":1.0,
         "TruckWeight":1.0,
         "DilemmaZoneRequestWeight": 20.0,
-        "CoordinationWeight":1,
-        "CoordinationPhase1":2,
-        "CoordinationPhase2":6,
-        "VirtualPriorityRequestPhase":1,
-        "VirtualPriorityRequestETA":90,
-        "CoordinationStartTime_Hour": 0.0,
-        "CoordinationEndTime_Hour": 24.0,
-        "CoordinationStartTime_Minute": 30.0,
-        "CoordinationEndTime_Minute": 30.0,
-        "Offset": 0.0,
-        "CycleLength":105.0,
-        "CoordinationDuration":25.0,
-        "MaxGreen":100.0    
+        "CoordinationWeight":1.0
     }
 }
