--- a/bin/corridors/speedway_field/speedway-mountain/nojournal/bin/supervisord.conf
+++ b/bin/corridors/speedway_field/speedway-mountain/nojournal/bin/supervisord.conf
@@ -182,6 +182,15 @@ redirect_stderr=true
 ;stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=5MB 
 
+[program: M_SignalCoordinationRequestGenerator]
+command=./M_SignalCoordinationRequestGenerator
+directory=/mmitss
+priority=12
+autostart=true
+redirect_stderr=true          
+;stdout_logfile=/nojournal/bin/log/coordinationLog.txt
+stdout_logfile_maxbytes=5MB
+
 ; The below sample eventlistener section shows all possible
 ; eventlistener subsection values, create one or more 'real'
 ; eventlistener: sections to be able to handle event notifications
