update the config files for simulation

--- a/bin/supervisord.conf
+++ b/bin/supervisord.conf
@@ -99,7 +99,7 @@ stdout_logfile_maxbytes=0
 [program: M_MapSpatBroadcaster]
 command=./M_MapSpatBroadcaster
 directory=/mmitss
-priority=3
+priority=2
 autostart=true
 redirect_stderr=true          
 stdout_logfile=/dev/fd/1        
@@ -108,53 +108,44 @@ stdout_logfile_maxbytes=0
 [program: M_PriorityRequestSolver]
 command=./M_PriorityRequestSolver
 directory=/mmitss
-priority=4
+priority=3
 autostart=true
 redirect_stderr=true       
 ;stdout_logfile=/dev/fd/1        
 ;stdout_logfile_maxbytes=0 
 
-[program: M_PriorityRequestServer]
-command=./M_PriorityRequestServer
-directory=/mmitss
-priority=6
-autostart=true
-redirect_stderr=true          
-;stdout_logfile=/dev/fd/1        
-;stdout_logfile_maxbytes=0   
-
 [program: M_TrafficControllerInterface]
 command=./M_TrafficControllerInterface
 directory=/mmitss
-priority=7
+priority=4
 stopsignal=INT
-autostart=true
-redirect_stderr=true          
-;stdout_logfile=/dev/fd/1        
-;stdout_logfile_maxbytes=0 
-
-[program: M_V2XDataCollector]
-command=./M_V2XDataCollector
-directory=/mmitss
-priority=9
 autostart=true
 redirect_stderr=true          
 ;stdout_logfile=/dev/fd/1        
 ;stdout_logfile_maxbytes=0
 
-[program: M_SignalCoordinationRequestGenerator]
-command=./M_SignalCoordinationRequestGenerator
+[program: M_PriorityRequestServer]
+command=./M_PriorityRequestServer
 directory=/mmitss
-priority=10
+priority=5
 autostart=true
 redirect_stderr=true          
-;stdout_logfile=/nojournal/bin/log/coordinationLog.txt
-stdout_logfile_maxbytes=5MB
+;stdout_logfile=/dev/fd/1        
+;stdout_logfile_maxbytes=0   
+
+[program: M_V2XDataCollector]
+command=./M_V2XDataCollector
+directory=/mmitss
+priority=6
+autostart=true
+redirect_stderr=true          
+;stdout_logfile=/dev/fd/1        
+;stdout_logfile_maxbytes=0
 
 ;[program:M_SystemInterface]
 ;command=./M_SystemInterface
 ;directory=/mmitss
-;priority=11
+;priority=7
 ;autostart=false
 ;redirect_stderr=true  
 ;stopasgroup=true             ; send stop signal to the UNIX process group (default false)
@@ -162,6 +153,14 @@ stdout_logfile_maxbytes=5MB
 ;stdout_logfile=/dev/fd/1        
 ;stdout_logfile_maxbytes=0 
 
+[program: M_SignalCoordinationRequestGenerator]
+command=./M_SignalCoordinationRequestGenerator
+directory=/mmitss
+priority=8
+autostart=true
+redirect_stderr=true          
+stdout_logfile=/nojournal/bin/log/coordinationLog.txt
+stdout_logfile_maxbytes=5MB
 
 
 ; The below sample eventlistener section shows all possible
