--- a/src/tools/time-phase-diagram/configuration.json
+++ b/src/tools/time-phase-diagram/configuration.json
@@ -1,13 +1,15 @@
 {
-    "MultipleTypesofRequest":false,
-    "NoOfRequest": 1,
-    "ETA":[38],
-    "NoOfRequiredPhase": 1,
-    "RequestedPhase":[8],
+    "MultipleTypesofRequest":true,
+    "NoOfRequest": 2,
+    "ETA":[0, 72],
+    "ETA_Duration": [4, 20],
+    "NoOfRequiredPhase": 2,
+    "RequestedPhase":[2, 2],
     "NoOfDilemmaZoneRequest": 1,
-    "DilemmaZoneETA":[30],
+    "DilemmaZoneETA":[60],
+    "DilemmaZoneETA_Duration": [4],
     "NoOfRequiredDilemmaZonePhase": 1,
-    "DilemmaZonePhases":[7],
+    "DilemmaZonePhases":[8],
     "NoOfPhasesInRing1": 8,
     "PhasesInRing1":[1,2,3,4,1,2,3,4],
     "NoOfPhasesInRing2": 8,
