update the code need to clean up

--- a/src/tools/time-phase-diagram/configuration.json
+++ b/src/tools/time-phase-diagram/configuration.json
@@ -1,15 +1,15 @@
 {
     "MultipleTypesofRequest":true,
-    "NoOfRequest": 2,
-    "ETA":[0, 72],
-    "ETA_Duration": [4, 20],
-    "NoOfRequiredPhase": 2,
-    "RequestedPhase":[2, 2],
+    "NoOfRequest": 1,
+    "ETA":[35],
+    "ETA_Duration": [4],
+    "NoOfRequiredPhase": 1,
+    "RequestedPhase":[4],
     "NoOfDilemmaZoneRequest": 1,
-    "DilemmaZoneETA":[60],
+    "DilemmaZoneETA":[25],
     "DilemmaZoneETA_Duration": [4],
     "NoOfRequiredDilemmaZonePhase": 1,
-    "DilemmaZonePhases":[8],
+    "DilemmaZonePhases":[2],
     "NoOfPhasesInRing1": 8,
     "PhasesInRing1":[1,2,3,4,1,2,3,4],
     "NoOfPhasesInRing2": 8,
