changed the config for speedway-mountain. TCI autostart is true now

--- a/bin/corridors/speedway_field/speedway-mountain/nojournal/bin/supervisord.conf
+++ b/bin/corridors/speedway_field/speedway-mountain/nojournal/bin/supervisord.conf
@@ -145,7 +145,7 @@ stdout_logfile_maxbytes=5MB
 command=./M_TrafficControllerInterface
 directory=/mmitss
 priority=7
-autostart=false
+autostart=true
 stopsignal=INT
 redirect_stderr=true          
 ;stdout_logfile=/nojournal/bin/log/tciLog.txt 
