--- a/src/simulation/mmitss-driver-model/src/DriverModel.vcxproj
+++ b/src/simulation/mmitss-driver-model/src/DriverModel.vcxproj
@@ -369,12 +369,14 @@
     </ClCompile>
     <ClCompile Include="GeoCoord.cpp" />
     <ClCompile Include="jsoncpp.cpp" />
+    <ClCompile Include="MsgBlob.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DriverModel.h" />
     <ClInclude Include="geoCoord.h" />
     <ClInclude Include="json\json-forwards.h" />
     <ClInclude Include="json\json.h" />
+    <ClInclude Include="MsgBlob.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
