--- a/bin/supervisord_simulation-tools.conf
+++ b/bin/supervisord_simulation-tools.conf
@@ -101,6 +101,13 @@ redirect_stderr=true
 stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=0 
 
+[program: M_SimulatedBsmBlobProcessor]
+command=./M_SimulatedBsmBlobProcessor
+directory=/mmitss
+redirect_stderr=true          
+stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=0 
+
 ; The below sample eventlistener section shows all possible
 ; eventlistener subsection values, create one or more 'real'
 ; eventlistener: sections to be able to handle event notifications
