--- a/bin/corridors/simulation-tools/nojournal/bin/mmitss-message-distributor-config.json
+++ b/bin/corridors/simulation-tools/nojournal/bin/mmitss-message-distributor-config.json
@@ -77,25 +77,31 @@
     ],
     "bsm_clients": 
     {
-        "transit":[
+        "Transit":[
             {
                 "ip_address": "10.12.6.20",
                 "port":20022
             }
         ],
-        "truck":[
+        "Truck":[
             {
                 "ip_address": "10.12.6.20",
                 "port":20022
             }
         ],
-        "emergency":[
+        "EmergencyVehicle":[
             {
                 "ip_address": "10.12.6.20",
                 "port":20022
             }
         ],
-        "passenger":[
+        "Passenger":[
+            {
+                "ip_address": "10.12.6.20",
+                "port":20022
+            }
+        ],
+        "other":[
             {
                 "ip_address": "10.12.6.20",
                 "port":20022
