--- a/config/simulation-tools/nojournal/bin/mmitss-message-distributor-config-speedway.json
+++ b/config/simulation-tools/nojournal/bin/mmitss-message-distributor-config-speedway.json
@@ -75,6 +75,12 @@
                 "ip_address": "10.12.6.20",
                 "port": 20022
             }
+        ],
+        "other": [
+            {
+                "ip_address": "10.12.6.20",
+                "port": 20022
+            }
         ]
     },
     "map_clients": [
