moved supervisor files to respective container config folders

--- a/config/Portland/market-11th/nojournal/bin/supervisord.conf
+++ b/config/Portland/market-11th/nojournal/bin/supervisord.conf
@@ -9,14 +9,14 @@
 ;  - Comments must have a leading space: "a=b ;comment" not "a=b;comment".
 
 [unix_http_server]
-file=/tmp/supervisor.sock   ; (the path to the socket file)
+file=/var/run/supervisor.sock   ; (the path to the socket file)
 ;chmod=0700                 ; socket file mode (default 0700)
 ;chown=nobody:nogroup       ; socket file uid:gid owner
 ;username=user              ; (default is no username (open server))
 ;password=123               ; (default is no password (open server))
 
-;[inet_http_server]         ; inet (TCP) server disabled by default
-;port=127.0.0.1:9001        ; (ip_address:port specifier, *:port for all iface)
+[inet_http_server]         ; inet (TCP) server disabled by default
+port=10.12.6.3:9001        ; (ip_address:port specifier, *:port for all iface)
 ;username=user              ; (default is no username (open server))
 ;password=123               ; (default is no password (open server))
 
@@ -25,7 +25,7 @@ logfile=/tmp/supervisord.log ; (main log file;default $CWD/supervisord.log)
 logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10           ; (num of main logfile rotation backups;default 10)
 loglevel=info                ; (log level;default info; others: debug,warn,trace)
-pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
+pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 nodaemon=true                ; (start in foreground if true;default false)  *********************** Needs to be true for Docker to manage ********************
 minfds=1024                  ; (min. avail startup file descriptors;default 1024)
 minprocs=200                 ; (min. avail process descriptors;default 200)
@@ -45,7 +45,7 @@ minprocs=200                 ; (min. avail process descriptors;default 200)
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
+serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 ;serverurl=http://127.0.0.1:9001 ; use an http:// url to specify an inet socket
 ;username=chris              ; should be same as http_username if set
 ;password=123                ; should be same as http_password if set
@@ -93,26 +93,8 @@ directory=/mmitss
 priority=1
 autostart=true
 redirect_stderr=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-
-[program: M_MsgEncoder]
-command=./M_MsgEncoder
-directory=/mmitss
-priority=2
-autostart=true
-redirect_stderr=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-
-[program: M_WirelessMsgDecoder]
-command=./M_WirelessMsgDecoder
-directory=/mmitss
-priority=3
-autostart=true
-redirect_stderr=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
+;stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=5MB
 
 [program: M_MapSpatBroadcaster]
 command=./M_MapSpatBroadcaster
@@ -120,64 +102,65 @@ directory=/mmitss
 priority=4
 autostart=true
 redirect_stderr=true          
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
 
 [program: M_PriorityRequestSolver]
 command=./M_PriorityRequestSolver
 directory=/mmitss
 priority=5
 autostart=true
-redirect_stderr=true       
-;stdout_logfile=/dev/fd/1        
-;stdout_logfile_maxbytes=0 
-
-[program: M_TrafficControllerInterface]
-command=./M_TrafficControllerInterface
-directory=/mmitss
-priority=6
-stopsignal=INT
-autostart=true
 redirect_stderr=true          
-stdout_logfile=/nojournal/bin/log/tciLog.txt       
+;stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=5MB
 
 [program: M_PriorityRequestServer]
 command=./M_PriorityRequestServer
 directory=/mmitss
-priority=7
+priority=6
 autostart=true
 redirect_stderr=true          
 ;stdout_logfile=/dev/fd/1        
-;stdout_logfile_maxbytes=0   
+stdout_logfile_maxbytes=5MB 
+
+[program: M_TrafficControllerInterface]
+command=./M_TrafficControllerInterface
+directory=/mmitss
+priority=7
+autostart=true
+stopsignal=INT
+redirect_stderr=true          
+;stdout_logfile=/nojournal/bin/log/tciLog.txt 
+stdout_logfile_maxbytes=5MB       
+
+[program: M_SystemInterface]
+command=./M_SystemInterface
+directory=/mmitss
+priority=9
+autostart=true
+stopasgroup=true             ; send stop signal to the UNIX process group (default false)
+killasgroup=true             ; SIGKILL the UNIX process group (def false
+redirect_stderr=true          
+;stdout_logfile=/dev/fd/1        
+stdout_logfile_maxbytes=5MB 
 
 [program: M_V2XDataCollector]
 command=./M_V2XDataCollector
 directory=/mmitss
-priority=8
+priority=10
 autostart=true
+stopsignal=INT
 redirect_stderr=true          
 ;stdout_logfile=/dev/fd/1        
-;stdout_logfile_maxbytes=0
-
-[program:M_SystemInterface]
-command=./M_SystemInterface
-directory=/mmitss
-priority=9
-autostart=false
-redirect_stderr=true  
-stopasgroup=true             ; send stop signal to the UNIX process group (default false)
-killasgroup=true             ; SIGKILL the UNIX process group (def false)        
-stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=0 
+stdout_logfile_maxbytes=5MB
 
 [program: M_SignalCoordinationRequestGenerator]
 command=./M_SignalCoordinationRequestGenerator
 directory=/mmitss
-priority=10
-autostart=false
+priority=12
+autostart=true
 redirect_stderr=true          
-stdout_logfile=/nojournal/bin/log/coordinationLog.txt
+;stdout_logfile=/nojournal/bin/log/coordinationLog.txt
 stdout_logfile_maxbytes=5MB
 
 ; The below sample eventlistener section shows all possible
