updated driver models in the simulation models

--- a/src/simulation/mmitss-driver-model/driver-model/DriverModel.vcxproj
+++ b/src/simulation/mmitss-driver-model/driver-model/DriverModel.vcxproj
@@ -36,7 +36,7 @@
     </SccLocalPath>
     <SccProvider>
     </SccProvider>
-    <ProjectName>M_DriverModelSource</ProjectName>
+    <ProjectName>ConnectedVehicle</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
