--- a/config/speedway-sample/simulation/speedway-cherry/nojournal/bin/mmitss-phase3-master-config.json
+++ b/config/speedway-sample/simulation/speedway-cherry/nojournal/bin/mmitss-phase3-master-config.json
@@ -24,7 +24,7 @@
 			"MessageEncoder": 10003,
 			"MessageDecoder": 10002
 		},
-		"MessageDistributor": 5000,
+		"MessageDistributor": 5001,
 		"RsmDecoder": 10006,
 		"OBUBSMReceiver": 10005,
 		"HostBsmDecoder": 10005,
@@ -108,9 +108,9 @@
 		}
 	},
 	"IntersectionReferencePoint": {
-		"Latitude_DecimalDegree": 123,
-		"Longitude_DecimalDegree": 321,
-		"Elevation_Meter": 213
+		"Latitude_DecimalDegree": 32.23599160827699,
+		"Longitude_DecimalDegree": -110.94813512309486,
+		"Elevation_Meter": 721
 	},
 	"DataTransfer": {
 		"FtpServerPort": 9090,
