--- a/simulation-models/speedway-sample/mmitss_simulation/mmitss_driver_model_config.json
+++ b/simulation-models/speedway-sample/mmitss_simulation/mmitss_driver_model_config.json
@@ -1,6 +1,6 @@
 {
-    "msg_distributor_ip": "10.12.6.20",
-    "msg_distributor_port": 10005,
+    "client_ip": "10.12.6.20",
+    "client_port": 10005,
     "vissim_origin_position":
     {
         "elevation_Meter": 540.11,
