--- a/src/common/v2x-data-transfer/config/v2x-data-transfer-config_roadside.json
+++ b/src/common/v2x-data-transfer/config/v2x-data-transfer-config_roadside.json
@@ -4,7 +4,7 @@
 	{
 		"server":
 		{
-			"data_directory": "/home/nvaltekar/Desktop",
+			"data_directory": "/home/ubuntu/mmitss",
 			"ip_address": "127.0.0.1",
 			"username": "username",
 			"password": "password"
@@ -13,7 +13,7 @@
 		[
 			{
 				"name": "intersection-1",
-				"v2x-data_location": "/home/nvaltekar/testdata"
+				"v2x-data_location": "/home/ubuntu/mmitss"
 			}
 		],
 		"StartTime_PushToServer": 
